# fp-rival-ronaling

./: .gitignore  CMakeLists.txt
esp32/ronaling/: ronaling.ino
include/: communicate.h  final-project.h  objDetect.h  qrcode.h
models/: objclass.txt
src/: communicate.cpp  final-project.cpp  objDetect.cpp  qrcode.cpp
